package com.nexusaid.core.entity.enums;

public enum CommitteeRoleStatus {
    PROPOSED,
    APPROVED,
    REJECTED
}
